--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "chordproject-parser": "^0.2.14",
+    "moment": "^2.29.4",
     "ngx-webstorage": "^11.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
