--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,10 +9,10 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16'
-      - run: ls && cd server
+      - run: ls && cd server/
       - run: ls && npm install
       - run: npm run && npm run server
-      - run: cd ../client && ls
+      - run: cd ../client/ && ls
       - run: npm install
       - run: npm start
       - run: npm cy:run
