--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,11 +8,18 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '16'
-      - run: ls && cd server/
-      - run: ls && npm install
-      - run: npm run && npm run server
-      - run: cd ../client/ && ls
-      - run: npm install
-      - run: npm start
-      - run: npm cy:run
+            node-version: '16'
+      - name: Start the server
+        working-directory: ./server
+        run: |
+          npm install
+          npm run server
+      - name: Start the frontend dev server
+        working-directory: ../client
+        run: |
+          npm install
+          npm start
+      - name: Run e2e tests
+        working-directory: ../client
+        run: |
+          npm run cy:open
