--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -4,11 +4,12 @@ on: [push]
 jobs:
   build-test:
     runs-on: ubuntu-latest
+    container: cypress/included:12.3.0
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-            node-version: '16'
+            node-version: '16.16.0'
       - uses: supercharge/mongodb-github-action@1.8.0
         with:
           mongodb-version: '6.0.4'
@@ -22,9 +23,6 @@ jobs:
           DROPBOX_CLIENT_ID: ${{ secrets.DROPBOX_CLIENT_ID }}
           DROPBOX_CLIENT_SECRET: ${{ secrets.DROPBOX_CLIENT_SECRET }}
           MONGO_URI: ${{ secrets.MONGO_URI }}
-      - uses: cypress-io/github-action@v5.5.1
-        with:
-            browser: chrome
 
       - name: Start the server
         working-directory: ./server
