added a final echo command to finish github worflow

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -31,4 +31,5 @@ jobs:
           npm start &
           cd ../client &&
           npm ci &&
-          npm start
+          npm start &
+          echo "Done!"
