fixed invalid yaml syntax

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -31,4 +31,4 @@ jobs:
             npm run server & 
             cd ../client &&
             npm install
-          run: npm start
+          start: npm start
