added another cd command after starting the server

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -25,7 +25,8 @@ jobs:
       - run: |
           cd ./server &&
           npm install &&
-          npm run server
+          npm run server &
+          cd ../
       - uses: cypress-io/github-action@v5
         with:
           working-directory: ./client
