--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -32,3 +32,10 @@ jobs:
           working-directory: ./client
           build: npm install
           start: npm start
+      - name: archive test artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-results
+          path: |
+            ./cypress/videos
+            ./client/cypress/screenshots
