--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -26,13 +26,11 @@ jobs:
           cd ./server &&
           npm install &&
           npm run server &
-          cd ../client &&
-          npm install &&
-          npm start &
-          cd ../
+          cd ../client
       - uses: cypress-io/github-action@v5
         with:
           working-directory: ./client
+          start: npm start
       - name: archive test artifacts
         uses: actions/upload-artifact@v3
         with:
