--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -26,7 +26,7 @@ jobs:
           cd ./server &&
           npm install &&
           npm run server &
-          cd ../client
+          pwd
       - uses: cypress-io/github-action@v5
         with:
           working-directory: ./client
