set workflow artifacts to always be uploaded

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -32,6 +32,7 @@ jobs:
           working-directory: ./client
           start: npm start
       - name: archive test artifacts
+        if: always()
         uses: actions/upload-artifact@v3
         with:
           name: test-results
