--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -23,8 +23,7 @@ jobs:
           DROPBOX_CLIENT_SECRET: ${{ secrets.DROPBOX_CLIENT_SECRET }}
           MONGO_URI: ${{ secrets.MONGO_URI }}
 
-      - name: Start the frontend server and run e2e tests
-        uses: cypress-io/github-action@v5
+      - uses: cypress-io/github-action@v5
         with:
           working-directory: ./client
           start: npm run start:all:servers
