--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "test": "ng test",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
-    "backend:server": "cd ../server && ls && npm run server",
+    "backend:server": "cd ../server && npm install && npm run server",
     "start:all:servers": "concurrently \"npm run backend:server\" \"npm start\""
   },
   "private": true,
