--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,6 +1,6 @@
 name: ci-cd
 run-name: ${{ github.actor }} built and tested the frontend
-on: [push]
+on: [pull_request, workflow_dispatch]
 jobs:
   build-test:
     runs-on: ubuntu-latest
