--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -8,10 +8,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-            node-version: '16.16.0'
+          node-version: "16.16.0"
       - uses: supercharge/mongodb-github-action@1.8.0
         with:
-          mongodb-version: '6.0.4'
+          mongodb-version: "6.0.4"
       - uses: iamsauravsharma/create-dotenv@v1.2.2
         env:
           PORT: 5000
@@ -23,8 +23,8 @@ jobs:
 
       - uses: cypress-io/github-action@v5
         with:
-          start: npm run start:all:servers
-          wait-on: 'http://localhost:4200'
+          start: npm run start:dev:servers
+          wait-on: "http://localhost:4200"
 
       - name: archive test artifacts
         if: always()
