--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -22,12 +22,13 @@ jobs:
         run: |
           npm install
           npm run build
+          zip -r eclesia-worship.zip .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: eclesia-worship
-          path: .
+          path: eclesia-worship.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -41,6 +42,9 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: eclesia-worship
+      - run: |
+          unzip eclesia-worship.zip
+          rm eclesia-worship.zip
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
