--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -11,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up Node.js version
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: '16.x'
 
@@ -32,20 +32,21 @@ jobs:
         run: |
           npm install
           npm run build
-          zip -r eclesia-worship.zip .
+          zip -r eclesia-worship.zip . -x node_modules/\*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: eclesia-worship
-          path: eclesia-worship.zip
+          path: |
+            eclesia-worship.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
       name: 'production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+      url: 'https://eclesiaworship.com'
 
     steps:
       - name: Download artifact from build job
