--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: "18"
       - uses: supercharge/mongodb-github-action@1.8.0
         with:
           mongodb-version: "6.0.4"
@@ -25,6 +25,7 @@ jobs:
         with:
           start: npm run start:dev:servers
           wait-on: "http://localhost:4200"
+          wait-on-timeout: 300
 
       - name: archive test artifacts
         if: always()
