--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: cypress-io/github-action@v5
         with:
           start: npm run start:dev:servers
-          wait-on: "http://localhost:4200"
+          wait-on: "http://[::1]:4200"
           wait-on-timeout: 300
 
       - name: archive test artifacts
