--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: "18"
 
       - name: Create dotenv file
         uses: iamsauravsharma/create-dotenv@v1.2.2
@@ -32,7 +32,7 @@ jobs:
         run: |
           npm install
           npm run build
-          zip -r eclesia-worship.zip . -x node_modules/\* package-lock.json
+          zip -r eclesia-worship.zip .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
