--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           npm install
           npm run build
-          zip -r eclesia-worship.zip .
+          zip -r eclesia-worship.zip . -x node_modules/\* package-lock.json
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -58,10 +58,10 @@ jobs:
           rm eclesia-worship.zip
 
       - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
+        uses: azure/login@v1
         with:
-          app-name: 'eclesiaworship'
-          slot-name: 'production'
-          publish-profile: ${{ secrets.AzureAppService_PublishProfile}}
-          package: .
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      - run: |
+          az webapp config set --resource-group eclesiaworship_group --name eclesiaworship --startup-file "npm install && npm start"
