renamed the build-test workflow name

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,4 +1,5 @@
-name: ci-cd
+name: Build and test the application
+
 run-name: ${{ github.actor }} built and tested the frontend
 on: [pull_request, workflow_dispatch]
 jobs:
