--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,4 +1,4 @@
-name: Build and deploy Node.js app to Azure Web App - eclesiaworship
+name: Build and deploy the app to Azure Web App
 
 on:
   push:
@@ -8,6 +8,9 @@ on:
 
 jobs:
   build:
+    permissions:
+      id-token: write
+
     runs-on: ubuntu-latest
 
     steps:
