--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   build:
     permissions:
+      contents: read
+      pages: write
       id-token: write
 
     runs-on: ubuntu-latest
