--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -8,11 +8,6 @@ on:
 
 jobs:
   build:
-    permissions:
-      contents: read
-      pages: write
-      id-token: write
-
     runs-on: ubuntu-latest
 
     steps:
@@ -47,6 +42,11 @@ jobs:
             eclesia-worship.zip
 
   deploy:
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+      
     runs-on: ubuntu-latest
     needs: build
     environment:
@@ -65,8 +65,6 @@ jobs:
       - name: 'Deploy to Azure Web App'
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
       - run: |
           az webapp config set --resource-group eclesiaworship_group --name eclesiaworship --startup-file "npm install && npm start"
