--- a/package.json
+++ b/package.json
@@ -16,14 +16,6 @@
   "author": "Denis Onu",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "express-async-handler": "^1.2.0",
-    "mongoose": "^6.9.0",
-    "dropbox": "^10.34.0",
-    "bcryptjs": "^2.4.3",
-    "dotenv": "^16.0.3",
-    "cors": "^2.8.5",
-    "node-fetch": "^3.3.0",
     "@angular/animations": "^15.1.0",
     "@angular/cdk": "^15.1.5",
     "@angular/common": "^15.1.0",
@@ -34,15 +26,23 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "bcryptjs": "^2.4.3",
     "chordproject-parser": "^0.2.14",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "dropbox": "^10.34.0",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "moment": "^2.29.4",
+    "mongoose": "^6.9.0",
     "ngx-webstorage": "^11.1.1",
+    "node-fetch": "^3.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20",
     "@angular-devkit/build-angular": "^15.1.5",
     "@angular/cli": "~15.1.5",
     "@angular/compiler-cli": "^15.1.0",
@@ -55,6 +55,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "nodemon": "^2.0.20",
     "typescript": "~4.9.4"
   }
 }
