--- a/package.json
+++ b/package.json
@@ -44,18 +44,18 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.5",
-    "@angular/cli": "~15.1.5",
+    "@angular/cli": "^15.2.10",
     "@angular/compiler-cli": "^15.1.0",
     "@types/jasmine": "~4.3.0",
     "concurrently": "^7.6.0",
-    "cypress": "^12.9.0",
+    "cypress": "^13.4.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "nodemon": "^2.0.20",
+    "nodemon": "^3.0.1",
     "typescript": "~4.9.4"
   }
 }
