--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "moment": "^2.29.4",
-    "mongoose": "^6.9.0",
+    "mongoose": ">=6.11.3",
     "ngx-webstorage": "^11.1.1",
     "node-fetch": "^3.3.0",
     "rxjs": "~7.8.0",
