configured digitalocean deployment with actions

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -18,50 +18,13 @@ jobs:
         with:
           node-version: "18"
 
-      - name: Create dotenv file
-        uses: iamsauravsharma/create-dotenv@v1.2.2
-        env:
-          PORT: 8080
-          NODE_ENV: production
-          DROPBOX_REFRESH_TOKEN: ${{ secrets.DROPBOX_REFRESH_TOKEN }}
-          DROPBOX_CLIENT_ID: ${{ secrets.DROPBOX_CLIENT_ID }}
-          DROPBOX_CLIENT_SECRET: ${{ secrets.DROPBOX_CLIENT_SECRET }}
-          MONGO_URI: ${{ secrets.PROD_MONGO_URI }}
-
-      - name: npm install and build
+      - name: Application build
         run: |
           npm install
           npm run build
-          zip -r eclesia-worship.zip .
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
-        with:
-          name: eclesia-worship
-          path: |
-            eclesia-worship.zip
             
-  # No longer deploying on Azure - new cofigurations incoming
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   environment:
-  #     name: 'production'
-  #     url: 'https://eclesiaworship.com'
-
-  #   steps:
-  #     - name: Download artifact from build job
-  #       uses: actions/download-artifact@v3
-  #       with:
-  #         name: eclesia-worship
-  #     - run: |
-  #         unzip eclesia-worship.zip
-  #         rm eclesia-worship.zip
-          
-  #     - name: 'Deploy to Azure Web App'
-  #       id: deploy-to-webapp
-  #       uses: azure/webapps-deploy@v2
-  #       with:
-  #         app-name: 'eclesiaworship'
-  #         slot-name: 'production'
-  #         publish-profile: ${{ secrets.AzureAppService_PublishProfile}}
-  #         package: .
+      - name: Deploy to DigitalOcean Apps Service
+        uses: digitalocean/action-doctl@v2
+        with:
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+        run: doctl apps create-deployment ${{ secrets.DIGITALOCEAN_APP_ID }}
