--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -23,8 +23,10 @@ jobs:
           npm install
           npm run build
             
-      - name: Deploy to DigitalOcean Apps Service
+      - name: Install doctl
         uses: digitalocean/action-doctl@v2
         with:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+          
+      - name: Deploy to DigitalOcean Apps Service
         run: doctl apps create-deployment ${{ secrets.DIGITALOCEAN_APP_ID }}
