--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
-    "build": "ng build --configuration=production"
+    "build": "ng build --configuration=production",
+    "build:digitalocean": "npm install --production=false && npm run build && npm ci"
   },
   "author": "Mathias Onu, Denis Onu",
   "license": "ISC",
