--- a/angular.json
+++ b/angular.json
@@ -11,21 +11,21 @@
         }
       },
       "root": "",
-      "sourceRoot": "src",
+      "sourceRoot": "client",
       "prefix": "app",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/client",
-            "index": "src/index.html",
-            "main": "src/main.ts",
+            "index": "client/index.html",
+            "main": "client/main.ts",
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
-              "src/assets",
+              "client/favicon.ico",
+              "client/assets",
               {
                 "glob": "**/*",
                 "input": "node_modules/@builder.io/partytown/lib",
@@ -34,7 +34,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+              "client/styles.scss"
             ],
             "allowedCommonJsDependencies": ["moment", "chordproject-parser"],
             "scripts": []
@@ -56,8 +56,8 @@
               "outputHashing": "all",
               "fileReplacements": [
                 {
-                  "replace": "src/environments/environment.development.ts",
-                  "with": "src/environments/environment.ts"
+                  "replace": "client/environments/environment.development.ts",
+                  "with": "client/environments/environment.ts"
                 }
               ]
             },
@@ -70,8 +70,8 @@
               "namedChunks": true,
               "fileReplacements": [
                 {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.development.ts"
+                  "replace": "client/environments/environment.ts",
+                  "with": "client/environments/environment.development.ts"
                 }
               ]
             }
@@ -102,10 +102,10 @@
             "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": ["client/favicon.ico", "client/assets"],
             "styles": [
               "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+              "client/styles.scss"
             ],
             "scripts": []
           }
