--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node server",
-    "server": "nodemon server",
+    "server": "tsc -p tsconfig-server.json -w | nodemon server-dist/server.js",
     "client": "ng serve",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "cy:open": "cypress open",
@@ -28,6 +28,8 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "@builder.io/partytown": "^0.7.6",
+    "@types/compression": "^1.7.5",
+    "@types/dropbox-chooser": "^1.0.6",
     "bcryptjs": "^2.4.3",
     "chordproject-parser": "^0.2.14",
     "compression": "^1.7.4",
@@ -48,7 +50,13 @@
     "@angular-devkit/build-angular": "^15.1.5",
     "@angular/cli": "^15.2.10",
     "@angular/compiler-cli": "^15.1.0",
+    "@types/cors": "^2.8.16",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.21",
     "@types/jasmine": "~4.3.0",
+    "@types/mongodb": "^4.0.7",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^20.9.1",
     "concurrently": "^7.6.0",
     "cypress": "^13.5.0",
     "jasmine-core": "~4.5.0",
