fixed server dist compilation issue

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "eclesia-worship",
   "version": "1.0.0",
   "description": "Web app that syncs with a shared Dropbox folder to manage and present songs.",
-  "main": "server.js",
+  "main": "server_dist/server.js",
   "type": "module",
   "scripts": {
-    "start": "tsc -p tsconfig-server.json -w | node server_dist/server.js",
-    "server": "tsc -p tsconfig-server.json -w | nodemon server_dist/server.js",
+    "start": "tsc -p tsconfig-server.json && node server_dist/server.js",
+    "server": "tsc -p tsconfig-server.json && tsc -p tsconfig-server.json -w | nodemon server_dist/server.js",
     "client": "ng serve",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "cy:open": "cypress open",
