--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dropbox": "^10.34.0",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "mdb-reader": "^3.0.0",
     "moment": "^2.29.4",
     "mongoose": ">=6.11.3",
     "ngx-webstorage": "^11.1.1",
