--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server_dist/server.js",
   "type": "module",
   "scripts": {
-    "start": "node server_dist/server.js",
-    "server": "tsc -p tsconfig-server.json && tsc -p tsconfig-server.json -w | nodemon server_dist/server.js",
+    "start": "node server_dist/server/server.js",
+    "server": "tsc -p tsconfig.json && tsc -p tsconfig.json -w | nodemon server_dist/server/server.js",
     "client": "ng serve",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "cy:open": "cypress open",
@@ -17,19 +17,6 @@
   "author": "Mathias Onu, Denis Onu",
   "license": "ISC",
   "dependencies": {
-    "@angular/animations": "^15.1.0",
-    "@angular/cdk": "^15.1.5",
-    "@angular/common": "^15.1.0",
-    "@angular/compiler": "^15.1.0",
-    "@angular/core": "^15.1.0",
-    "@angular/forms": "^15.1.0",
-    "@angular/material": "^15.1.5",
-    "@angular/platform-browser": "^15.1.0",
-    "@angular/platform-browser-dynamic": "^15.1.0",
-    "@angular/router": "^15.1.0",
-    "@builder.io/partytown": "^0.7.6",
-    "@types/compression": "^1.7.5",
-    "@types/dropbox-chooser": "^1.0.6",
     "bcryptjs": "^2.4.3",
     "chordproject-parser": "^0.2.14",
     "compression": "^1.7.4",
@@ -39,33 +26,20 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "mdb-reader": "^3.0.0",
-    "moment": "^2.29.4",
     "mongoose": ">=6.11.3",
-    "ngx-webstorage": "^11.1.1",
     "node-fetch": "^3.3.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.1.5",
-    "@angular/cli": "^15.2.10",
-    "@angular/compiler-cli": "^15.1.0",
+    "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.16",
     "@types/dotenv": "^8.2.0",
+    "@types/dropbox-chooser": "^1.0.7",
     "@types/express": "^4.17.21",
-    "@types/jasmine": "~4.3.0",
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.9.1",
     "concurrently": "^7.6.0",
-    "cypress": "^13.5.0",
-    "jasmine-core": "~4.5.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
     "nodemon": "^3.0.1",
     "typescript": "~4.9.4"
   }
