--- a/package.json
+++ b/package.json
@@ -25,17 +25,20 @@
     "dropbox": "^10.34.0",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mdb-reader": "^3.0.0",
     "mongoose": ">=6.11.3",
     "node-fetch": "^3.3.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.16",
     "@types/dotenv": "^8.2.0",
     "@types/dropbox-chooser": "^1.0.7",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.9.1",
