--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mdb-reader": "^3.0.0",
     "mongoose": ">=6.11.3",
     "node-fetch": "^3.3.0",
+    "nodemailer": "^6.9.8",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -42,6 +43,7 @@
     "@types/mongodb": "^4.0.7",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.9.1",
+    "@types/nodemailer": "^6.4.14",
     "concurrently": "^7.6.0",
     "nodemon": "^3.0.1",
     "typescript": "~4.9.4"
