--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,21 @@
 {
   "compilerOptions": {
-      "module": "NodeNext",
-      "moduleResolution": "NodeNext",
-      "target": "ES2022",
-      "sourceMap": true,
-      "allowSyntheticDefaultImports": true,
-      "outDir": "server_dist",
-      "esModuleInterop": true
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "outDir": "server_dist",
+    "noImplicitOverride": true,
+    "noPropertyAccessFromIndexSignature": false,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "sourceMap": true,
+    "declaration": false,
+    "downlevelIteration": true,
+    "experimentalDecorators": true,
+    "moduleResolution": "node",
+    "importHelpers": true,
+    "target": "ES2022",
+    "module": "ES2022",
+    "useDefineForClassFields": false,
   },
   "files": ["server/server.ts"],
   "include": ["server/**/*"]
